deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-foo
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ac75b1f3c826b42f2800cf9402c4170b-692752308.us-east-1.elb.amazonaws.com 
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: server-foo
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-bar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ac75b1f3c826b42f2800cf9402c4170b-692752308.us-east-1.elb.amazonaws.com 
    http:
      paths:
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: server-bar
            port:
              number: 8080
---
